--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lbg3-rest-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "This application is a small, self contained, in-memory REST app.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -10,11 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "nedb": "^1.8.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
     "supertest": "^6.2.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Peter-Dagley/22FebEnable2_Thursday_App.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Peter-Dagley/22FebEnable2_Thursday_App/issues"
+  },
+  "homepage": "https://github.com/Peter-Dagley/22FebEnable2_Thursday_App#readme"
 }
